tests/ui/associated-inherent-types/late-bound-regions.stderr
error[E0515]: cannot return value referencing local variable `local`
  --> $DIR/late-bound-regions.rs:22:5
   |
LL |     f(&local)
   |     ^^------^
   |     | |
   |     | `local` is borrowed here
   |     returns a value referencing data owned by the current function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0515`.
